--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,13 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100vh;
+  overflow-x: hidden;
+}
+
+#root {
+  height: 100vh;
+  overflow-x: hidden;
 }
 
 code {
